Update zapret to b12b1a5 (v70.6) Update x3mRouting to ed25622 Refactor zapret-discord.sh: VoIP detection via app/web split and precise packet matching zapret-config: use --filter-l7=discord,stun for Discord VoIP detection and set NFQWS_TCP/UDP_PKT_OUT to 3

--- a/.github/workflows/multibypass-build.yml
+++ b/.github/workflows/multibypass-build.yml
@@ -195,6 +195,7 @@ jobs:
         uses: crazy-max/ghaction-upx@v3
         with:
           install-only: true
+          version: v4.2.4
 
       - name: Compress binaries
         shell: bash
