zapret: bump to 9776d5d (v71.1.1)
multibypass-build.yml: use full arch names for run_dir

bypass.sh:
 - add the ability to specify version in easy_update
 - update arch names to match workflow
 - update package installation list

- zapret-config.sh:
  - update fooling rules
  - adjust NFQWS_PKT values
  - add FILTER_TTL_EXPIRED_ICMP option

--- a/.github/workflows/multibypass-build.yml
+++ b/.github/workflows/multibypass-build.yml
@@ -215,9 +215,9 @@ jobs:
             echo "Processing $dir"
             ls -l "$dir"
             case $dir in
-              *-linux-arm )     run_dir arm ;;
-              *-linux-arm64 )   run_dir aarch64 ;;
-              *-linux-armv7hf ) run_dir armv7hf ;;
+              *-linux-arm )     run_dir linux-arm ;;
+              *-linux-arm64 )   run_dir linux-arm64 ;;
+              *-linux-armv7hf ) run_dir linux-armv7hf ;;
             esac
           done
           ls -lhR
